# annotation-correction-3D-boxes

./: LICENSE  README.md  pyproject.toml
src/: box_types.py  computation_time_stats.py  constants.py  correct.py  evaluate.py  run.py  target_motion_compensation.py  transformation_utils.py  visualize.py
src/data_loaders/: Argoverse2DataLoader.py  BaseDataLoader.py  MANTruckScenesDataLoader.py  NuScenesDataLoader.py
